feat:[CHOAS:11956]:fault-doc-batch-5 (#102179)
* ca4c8d feat:[CHOAS:11956]:fault-doc-batch-5