@@ -1,198 +1,231 @@
 ---
 id: pod-jvm-trigger-gc
-title: Pod JVM trigger gc
+title: Pod JVM trigger GC
+sidebar_label: Pod JVM Trigger GC
+description: Force the JVM in a target Kubernetes pod to run garbage collection on a configurable schedule so you can test how the application behaves under repeated GC pauses.
+keywords:
+  - chaos engineering
+  - pod jvm trigger gc
+  - java garbage collection
+  - jvm fault
+  - kubernetes pod fault
+tags:
+  - chaos-engineering
+  - pod-faults
+  - jvm-chaos
 ---
 
-Pod JVM trigger gc triggers the garbage collector for a Java process executing in a Kubernetes pod. This causes unused (or out of scope) objects and variables to be garbage collected and recycled, thereby freeing up memory space.
+import { Troubleshoot } from '@site/src/components/AdaptiveAIContent';
 
-:::tip
-JVM chaos faults use the [Byteman utility](https://byteman.jboss.org/) to inject chaos faults into the JVM.
+Pod JVM trigger GC is a Kubernetes pod-level chaos fault that forces a JVM running in a target container to run garbage collection repeatedly for a configurable duration. Only the targeted JVM is affected; other processes in the pod and other pods on the node are unaffected. When the fault ends, the JVM resumes normal GC scheduling immediately.
+
+Use this fault to test how a Java application behaves under repeated GC pauses: spikes in request latency, missed scheduled tasks, paused background workers, or probe failures caused by the JVM stopping the world.
+
+:::info Run your first experiment
+If you have not configured the chaos infrastructure yet, go to [Quickstart](/docs/chaos-engineering/quickstart) to install the chaos infrastructure and run an experiment end to end.
 :::
 
-![Pod JVM trigger gc](./static/images/pod-jvm-trigger-gc.png)
+---
 
-### Use cases
-Pod JVM trigger gc:
-- Determines how the application behaves when memory space is freed up randomly for a brief period.
-- Determines how efficiently an application recovers and returns to normalcy.
+## Use cases
 
-### Permissions required
-Below is a sample Kubernetes role that defines the permissions required to execute the fault.
+Run this fault when you want to answer concrete questions like:
 
-```yaml
-apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
-metadata:
-  namespace: hce
-  name: pod-jvm-trigger-gc
-spec:
-  definition:
-    scope: Namespaced
-permissions:
-  - apiGroups: [""]
-    resources: ["pods"]
-    verbs: ["create", "delete", "get", "list", "patch", "deletecollection", "update"]
-  - apiGroups: [""]
-    resources: ["events"]
-    verbs: ["create", "get", "list", "patch", "update"]
-  - apiGroups: [""]
-    resources: ["pods/log"]
-    verbs: ["get", "list", "watch"]
-  - apiGroups: [""]
-    resources: ["deployments, statefulsets"]
-    verbs: ["get", "list"]
-  - apiGroups: ["batch"]
-    resources: ["jobs"]
-    verbs: ["create", "delete", "get", "list", "deletecollection"]
-```
+- **GC-pause tolerance:** When the JVM stops the world more often than usual, do request handlers handle it gracefully or do upstream timeouts cascade?
+- **GC algorithm comparison:** Compare CMS, G1, ZGC, and Shenandoah under forced GC pressure to validate the choice for your workload.
+- **Heap-sizing validation:** Does the heap have enough headroom that forced GCs stay short, or does each cycle take seconds?
+- **Probe sensitivity:** Are readiness and liveness probes resilient to short stop-the-world events?
+- **JIT and warmup interaction:** Confirm that forced GC does not deoptimize hot paths in a way that hurts steady-state throughput.
 
+---
 
+## Prerequisites
 
-:::info Java requirements
-This fault requires the following Java-specific prerequisites:
-- The Java process must allow agent attachment (Attach API must be available).
-- Utilities like `ps`, `pgrep`, and `bash` must be available in the target container.
-- File permissions must allow the JVM to read and execute agent files.
-- Agent attachment must not be restricted by user or security context configurations.
-- The target container image must not use a restricted/minimal Java runtime that removes attach-related modules.
+- **Kubernetes version:** 1.21 or later. Go to [What's supported](/docs/chaos-engineering/whats-supported) to confirm distribution support.
+- **Target pod is Running:** The Java application pod is in the `Running` state.
+- **Java agent attach available:** The Java process allows agent attach. Utilities such as `ps`, `pgrep`, and `bash` are present in the container, and the JVM is not built with a restricted runtime that strips attach modules.
+- **Privileged pods allowed:** The cluster lets you schedule privileged pods in the chaos namespace. GKE Autopilot supports this fault but requires the one-time setup in [Chaos on GKE Autopilot](/docs/resilience-testing/chaos-testing/gke-autopilot); other locked-down distributions may need similar exemptions.
+- **Container runtime access:** The chaos pod can reach the container runtime socket on the target node (`/run/containerd/containerd.sock`, `/var/run/docker.sock`, or `/var/run/crio/crio.sock`).
+- **Workload selector defined:** The chaos experiment knows the target workload by kind, namespace, and either names or labels.
+
+:::info JVM chaos uses the Byteman agent
+This fault attaches a [Byteman](https://byteman.jboss.org/) agent to the target JVM over `BYTEMAN_PORT`. The port must be reachable from the chaos pod and must not be in use by the application.
 :::
 
-### Supported environments
+---
 
-<table>
-  <tr>
-    <th> Platform </th>
-    <th> Support Status </th>
-  </tr>
-  <tr>
-    <td> GKE (Google Kubernetes Engine) </td>
-    <td> ✅ Supported </td>
-  </tr>
-  <tr>
-    <td> EKS (Amazon Elastic Kubernetes Service) </td>
-    <td> ✅ Supported </td>
-  </tr>
-  <tr>
-    <td> AKS (Azure Kubernetes Service) </td>
-    <td> ✅ Supported </td>
-  </tr>
-  <tr>
-    <td> GKE Autopilot </td>
-    <td> ✅ Supported </td>
-  </tr>
-  <tr>
-    <td> Self-managed Kubernetes </td>
-    <td> ✅ Supported </td>
-  </tr>
-</table>
+## Supported environments
 
-### Optional tunables
-<table>
-  <tr>
-    <th> Tunable </th>
-    <th> Description </th>
-    <th> Notes </th>
-  </tr>
- <tr>
-    <td> TOTAL_CHAOS_DURATION </td>
-    <td> Duration through which chaos is injected into the target resource. Should be provided in <code>[numeric-hours]h[numeric-minutes]m[numeric-seconds]s</code> format. </td>
-    <td> Default: <code>30s</code>. Examples: <code>1m25s</code>, <code>1h3m2s</code>, <code>1h3s</code>. For more information, go to <a href="/docs/chaos-engineering/faults/chaos-faults/common-tunables-for-all-faults/#duration-of-the-chaos"> duration of the chaos.</a></td>
-  </tr>
-  <tr>
-    <td> POD_AFFECTED_PERC </td>
-    <td> Percentage of total pods to target. Provide numeric values. </td>
-    <td> Default: 0 (corresponds to 1 replica). For more information, go to <a href="/docs/chaos-engineering/faults/chaos-faults/kubernetes/pod/common-tunables-for-pod-faults#pod-affected-percentage">pods affected percentage </a> </td>
-    </tr>
-  <tr>
-    <td> JAVA_HOME </td>
-    <td> Path to the Java installation directory. </td>
-    <td> For example, /tmp/dir/jdk. </td>
-  </tr>
-  <tr>
-    <td> BYTEMAN_PORT </td>
-    <td> Port used by the Byteman agent. </td>
-    <td> Default: <code>9091</code>. </td>
-  </tr>
-  <tr>
-    <td> CONTAINER_RUNTIME </td>
-    <td> Container runtime interface for the cluster</td>
-    <td> Default: containerd. Support values: docker, containerd and crio. For more information, go to <a href="/docs/chaos-engineering/faults/chaos-faults/kubernetes/pod/pod-api-modify-body#container-runtime-and-socket-path">container runtime</a>.</td>
-    </tr>
-    <tr>
-    <td> SOCKET_PATH </td>
-    <td> Path of the containerd or crio or docker socket file. </td>
-    <td> Default: <code>/run/containerd/containerd.sock</code>. For more information, go to <a href="/docs/chaos-engineering/faults/chaos-faults/kubernetes/pod/pod-api-modify-body#container-runtime-and-socket-path">socket path</a>.</td>
-    </tr>
-  <tr>
-    <td> RAMP_TIME </td>
-    <td> Period to wait before and after injecting chaos. Should be provided in <code>[numeric-hours]h[numeric-minutes]m[numeric-seconds]s</code> format. </td>
-    <td> Default: <code>0s</code>. Examples: <code>1m25s</code>, <code>1h3m2s</code>, <code>1h3s</code>. For more information, go to <a href= "/docs/chaos-engineering/faults/chaos-faults/common-tunables-for-all-faults#ramp-time">ramp time.</a></td>
-  </tr>
-  <tr>
-    <td> SEQUENCE </td>
-    <td> Sequence of chaos execution for multiple target pods. </td>
-    <td> Default: parallel. Supports serial and parallel. For more information, go to <a href="/docs/chaos-engineering/faults/chaos-faults/common-tunables-for-all-faults#sequence-of-chaos-execution">sequence of chaos execution</a>.</td>
-    </tr>
-  <tr>
-    <td> TARGET_CONTAINER </td>
-    <td> Name of the container subject to API header modification. </td>
-    <td> None. For more information, go to <a href="/docs/chaos-engineering/faults/chaos-faults/kubernetes/pod/common-tunables-for-pod-faults#target-specific-container">target specific container</a></td>
-    </tr>
-  <tr>
-    <td> TARGET_PODS </td>
-    <td> Comma-separated list of application pod names subject to pod HTTP modify body.</td>
-    <td> If not provided, the fault selects target pods randomly based on provided appLabels. For more information, go to <a href="/docs/chaos-engineering/faults/chaos-faults/kubernetes/pod/common-tunables-for-pod-faults#target-specific-pods"> target specific pods</a>.</td>
-    </tr>
-  <tr>
-    <td> NODE_LABEL </td>
-    <td> Node label used to filter the target node if <code>TARGET_NODE</code> environment variable is not set. </td>
-    <td> It is mutually exclusive with the <code>TARGET_NODE</code> environment variable. If both are provided, the fault uses <code>TARGET_NODE</code>. For more information, go to <a href="/docs/chaos-engineering/faults/chaos-faults/kubernetes/node/common-tunables-for-node-faults#target-nodes-with-labels">node label.</a></td>
-    </tr>
-  <tr>
-    <td> LIB_IMAGE </td>
-    <td> Image used to inject chaos. </td>
-    <td> Default: <code>harness/chaos-go-runner:main-latest</code>. For more information, go to <a href = "/docs/chaos-engineering/faults/chaos-faults/common-tunables-for-all-faults#image-used-by-the-helper-pod">image used by the helper pod.</a></td>
-    </tr>
-</table>
+| Platform | Support status |
+| --- | --- |
+| Amazon EKS | Supported |
+| Azure AKS | Supported |
+| Google GKE | Supported |
+| Red Hat OpenShift | Supported |
+| Rancher | Supported |
+| VMware Tanzu | Supported |
+| Self-managed Kubernetes (CNCF-certified) | Supported |
+| GKE Autopilot | Supported with [Autopilot setup](/docs/resilience-testing/chaos-testing/gke-autopilot) |
+| EKS Fargate, ACI virtual nodes | Not supported (no access to container runtime sockets) |
 
-### Parameters
+---
 
-The following YAML snippet illustrates the use of these tunables:
+## Permissions required
 
-[embedmd]:# (./static/manifests/pod-jvm-trigger-gc/params.yaml yaml)
-```yaml
-apiVersion: litmuschaos.io/v1alpha1
-kind: KubernetesChaosExperiment
-metadata:
-  name: pod-jvm-trigger-gc
-  namespace: hce
-spec:
-  tasks:
-     - definition:
-        chaos:
-          env:
-            - name: TOTAL_CHAOS_DURATION
-              value: "60"
-            - name: POD_AFFECTED_PERCENTAGE
-              value: ""
-            - name: BYTEMAN_PORT
-              value: "9091"
-            - name: JAVA_HOME
-              value: ""
-            - name: CONTAINER_RUNTIME
-              value: containerd
-            - name: SOCKET_PATH
-              value: /run/containerd/containerd.sock
-            - name: LIB_IMAGE
-              value: docker.io/harness/chaos-ddcr-faults:1.49.2
-            - name: RAMP_TIME
-              value: ""
-            - name: SEQUENCE
-              value: parallel
-            - name: TARGET_CONTAINER
-              value: ""
-            - name: TARGET_PODS
-              value: ""
-            - name: NODE_LABEL
-              value: ""
-```
+The fault runs under the chaos infrastructure's service account.
+
+| Resource (`apiGroup`) | Verbs | Why it is needed |
+| --- | --- | --- |
+| `pods` (`""`) | `get`, `list`, `create`, `delete`, `deletecollection`, `patch`, `update` | Discover target pods and run the chaos pod on the same node |
+| `pods/log` (`""`) | `get`, `list`, `watch` | Stream chaos pod logs for status and debugging |
+| `deployments`, `statefulsets`, `replicasets`, `daemonsets` (`apps`) | `get`, `list` | Resolve the target workload to the pods it owns |
+| `events` (`""`) | `get`, `list`, `create`, `patch`, `update` | Record fault progress as Kubernetes events |
+| `jobs` (`batch`) | `get`, `list`, `create`, `delete`, `deletecollection` | Run the chaos job that drives the fault |
+
+The default Harness chaos infrastructure service account already includes these permissions.
+
+---
+
+## Fault tunables
+
+Configure the following fault parameters when you add Pod JVM trigger GC to an experiment in Chaos Studio. Defaults are shown for reference.
+
+**Chaos parameters**
+
+| Tunable | Description | Default |
+| --- | --- | --- |
+| `TOTAL_CHAOS_DURATION` | Duration of the fault in seconds. The JVM is asked to run GC repeatedly across this window. | `60` |
+
+**JVM**
+
+| Tunable | Description | Default |
+| --- | --- | --- |
+| `BYTEMAN_PORT` | Port on which the Byteman agent listens inside the container. Must not conflict with any port already in use. | `9091` |
+| `JAVA_HOME` | Absolute path to the Java installation inside the container. Empty auto-detects from `PATH`. | `""` |
+
+**Targeting**
+
+| Tunable | Description | Default |
+| --- | --- | --- |
+| `TARGET_PODS` | Comma-separated list of pod names to target. Empty selects from the workload's pods using `POD_AFFECTED_PERCENTAGE`. | `""` |
+| `TARGET_CONTAINER` | Container in the pod running the JVM. Empty targets the first container in the pod spec. | `""` |
+| `NODE_LABEL` | Label selector to filter target pods by the node they run on. Empty disables node-based filtering. | `""` |
+| `POD_AFFECTED_PERCENTAGE` | Percentage of the workload's pods to target. `0` means one pod. | `0` |
+| `SEQUENCE` | When multiple pods are targeted, inject `parallel` (all at once) or `serial` (one after another). | `parallel` |
+
+**Runtime and helper**
+
+| Tunable | Description | Default |
+| --- | --- | --- |
+| `CONTAINER_RUNTIME` | Container runtime on the target nodes. One of `containerd`, `docker`, `crio`. | `containerd` |
+| `SOCKET_PATH` | Path to the container runtime socket on the target node. Set to match `CONTAINER_RUNTIME`. | `/run/containerd/containerd.sock` |
+| `RAMP_TIME` | Wait period in seconds before and after the fault. Go to [ramp time](/docs/chaos-engineering/faults/chaos-faults/common-tunables-for-all-faults#ramp-time) to read how it is applied. | `0` |
+
+Common pod selection tunables (`TARGET_WORKLOAD_KIND`, `TARGET_WORKLOAD_NAMESPACE`, `TARGET_WORKLOAD_NAMES`, `TARGET_WORKLOAD_LABELS`) are documented in [common pod fault tunables](/docs/chaos-engineering/faults/chaos-faults/kubernetes/pod/common-tunables-for-pod-faults). Tunables that apply to every fault are documented in [common tunables for all faults](/docs/chaos-engineering/faults/chaos-faults/common-tunables-for-all-faults).
+
+:::tip Pair with GC logs
+Enable GC logging on the target JVM (`-Xlog:gc*:file=/tmp/gc.log`) before the fault so you can compare pause counts and durations during and after the injection.
+:::
+
+### Configure for your container runtime
+
+Set `CONTAINER_RUNTIME` and `SOCKET_PATH` to match the runtime on the target node:
+
+| `CONTAINER_RUNTIME` | `SOCKET_PATH` |
+| --- | --- |
+| `containerd` (default) | `/run/containerd/containerd.sock` |
+| `docker` | `/var/run/docker.sock` |
+| `crio` | `/var/run/crio/crio.sock` |
+
+---
+
+## Fault execution in brief
+
+Attaches a Java agent to the target JVM and calls `System.gc()` repeatedly for `TOTAL_CHAOS_DURATION` seconds.
+
+---
+
+## Expected behavior during fault execution
+
+- Garbage collection runs more often than usual. Each cycle stops the world for at least a brief moment, depending on the GC algorithm and heap size.
+- Application request latency spikes during each pause; throughput drops correspondingly.
+- GC logs show a higher rate of full collections (or cycles, for concurrent collectors).
+- Allocator pressure may show as elevated CPU as the JVM compacts heap regions.
+
+:::info When the fault ends
+The JVM resumes normal GC scheduling immediately. Heap state and live objects are unchanged by the forced cycles.
+:::
+
+### Signals to watch
+
+Attach [resilience probes](/docs/resilience-testing/chaos-testing/probes) to assert each layer:
+
+- **GC pause time:** Use a [Prometheus probe](/docs/resilience-testing/chaos-testing/probes/apm-probes) on `jvm_gc_pause_seconds` or equivalent micrometer/JMX metric.
+- **Application latency:** Use an [HTTP probe](/docs/resilience-testing/chaos-testing/probes/http-probe) on a representative endpoint to detect tail-latency spikes.
+- **Pod readiness:** Use a [Kubernetes probe](/docs/resilience-testing/chaos-testing/probes/k8s-probe) to fail when the target pod oscillates `NotReady`.
+
+---
+
+## Verify the fault execution effect
+
+While the experiment is running, confirm GCs are running:
+
+1. **Inspect GC counts.**
+
+   ```bash
+   kubectl exec -n <namespace> <target-pod> -c <target-container> -- jstat -gc 1 1000 5
+   ```
+
+   `YGC` and `FGC` counters should increment faster than the application's baseline rate.
+
+2. **Confirm application-level impact.**
+
+   Watch the application's p99 latency or an HTTP probe. Latency spikes should correlate with the GC events.
+
+---
+
+## Recovery and cleanup
+
+- **End of duration:** The JVM resumes normal GC scheduling automatically.
+- **Abort the experiment:** Stopping the experiment from Chaos Studio triggers the same cleanup path.
+- **Stuck JVM:** If the application is wedged, restart the pod to clear the state.
+
+---
+
+## Limitations
+
+- **Serverless Kubernetes (EKS Fargate, ACI virtual nodes):** These platforms do not expose container runtime sockets and reject the privileged access the fault needs. GKE Autopilot is supported once the one-time setup in [Chaos on GKE Autopilot](/docs/resilience-testing/chaos-testing/gke-autopilot) is in place.
+- **Windows containers:** This fault is supported on Linux pods only.
+- **Non-JVM processes:** This fault targets a Java process.
+- **JVMs that ignore `System.gc()`:** Some configurations (`-XX:+DisableExplicitGC`) suppress explicit GC requests. Remove the flag or accept that this fault has no effect on that JVM.
+
+---
+
+## Troubleshooting
+
+<Troubleshoot
+  issue="Pod JVM trigger GC experiment stays Pending or never starts in Harness Chaos Engineering"
+  mode="docs"
+  fallback="Inspect the chaos pods in the experiment namespace with kubectl describe pod -n <chaos-namespace>. The most common causes are taints on the target node that the chaos pods do not tolerate, insufficient resources, or a PodSecurity admission policy blocking privileged pods. Add the required tolerations or run in a namespace with privileged Pod Security level."
+/>
+
+<Troubleshoot
+  issue="No GC activity observed during pod-jvm-trigger-gc"
+  mode="docs"
+  fallback="The most common causes are: the JVM was started with -XX:+DisableExplicitGC and ignores System.gc(); the wrong container is targeted (set TARGET_CONTAINER explicitly); JAVA_HOME is not detectable; or BYTEMAN_PORT is already in use. Verify with kubectl exec <pod> -- jstat -gc 1 1000 5 before and during the fault."
+/>
+
+<Troubleshoot
+  issue="Connection to container runtime fails for pod-jvm-trigger-gc in Harness Chaos Engineering"
+  mode="docs"
+  fallback="The default SOCKET_PATH is /run/containerd/containerd.sock. For Docker, set CONTAINER_RUNTIME=docker and SOCKET_PATH=/var/run/docker.sock. For CRI-O, set CONTAINER_RUNTIME=crio and SOCKET_PATH=/var/run/crio/crio.sock."
+/>
+
+---
+
+## Related faults
+
+- [Pod JVM CPU stress](/docs/chaos-engineering/faults/chaos-faults/kubernetes/pod/pod-jvm-cpu-stress): Saturate CPU inside the JVM.
+- [Pod JVM method latency](/docs/chaos-engineering/faults/chaos-faults/kubernetes/pod/pod-jvm-method-latency): Add latency to a Java method invocation.
+- [Pod memory hog](/docs/chaos-engineering/faults/chaos-faults/kubernetes/pod/pod-memory-hog): Consume container memory until OOM.
+- [Common pod fault tunables](/docs/chaos-engineering/faults/chaos-faults/kubernetes/pod/common-tunables-for-pod-faults): Shared environment variables for selecting target pods and workloads.
